# golf-compressor

./: .gitignore  Makefile  README.md  compress.py  genetic_algo.py  get_compression_candidates.py  public_data.py  pyproject.toml  strip.py  utils.py
.github/workflows/: crawl.yml  release.yml
deflate_optimizer/: _junk_demo.py  _junk_tree_utils.py  bitio.py  cl_code_length_collector.py  dump_deflate_stream.py  enumerate_variable_occurrences.py  huffman.py  load_deflate_text.py  optimizer.py  rle_dp_helper.py  variable_conflict.py
deflate_optimizer/blocks/: __init__.py  dynamic_huffman.py  fixed_huffman.py  huffman.py  stored.py
deflate_optimizer_cpp/: benchmark.py  blocks.hpp  geneticalgo  geneticalgo.cpp  optimal_lit_code_lengths.hpp  optimal_parsing.hpp  optimizer  optimizer.cpp  optimizer.hpp  test_optimal_lit_code_lengths.cpp  two_block_optimizer.cpp  variable.hpp  variable_optimizer  variable_optimizer.cpp  variable_optimizer.hpp  xorshift.hpp
deflate_optimizer_cpp/binary_old/: variable_optimizer_27cddc4440d3272cd24f0102f7ee0bef4640c066
python_minifier/: LICENSE  expression_printer.py  ministring.py  module_printer.py  token_printer.py
tasks/: task400_old.json
tools/: setup.sh
