[project]
name = "golf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "astor>=0.8.1",
    "dataclass-wizard>=0.35.1",
    "flask>=3.1.2",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.5",
    "openai>=1.98.0",
    "pandas>=2.3.1",
    "tqdm>=4.67.1",
    "zopfli>=0.2.3.post1",
]
